--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/cookbook
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=teodora.romic.brains22@gmail.com
+spring.mail.password=vdzbdbevgfqlmtuw
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
