Added security, login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.mail.username=teodora.romic.brains22@gmail.com
 spring.mail.password=vdzbdbevgfqlmtuw
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.security.token-duration=1000000
