More token time

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.mail.password=vdzbdbevgfqlmtuw
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.security.token-duration=1000000
+spring.security.token-duration=1000000000000
